src/components/Card/Card.css
.Card {
  margin: 4px;
  padding: 8px;
  border: 1px solid #ccc;
  border-radius: 3px;
  background: #ffffff;
  max-height: 300px;
  overflow-y: scroll;
  transition: ease-in-out 300ms;
}

.Card:hover {
  background: #ffffff50;
  cursor: pointer;
  transition: ease-in-out 300ms;
}

